[package]
name = "webgl"
version = "0.1.0"
authors = ["Lucas V. Schuermann <lucas@lvs.io>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.53"
wasm-bindgen = "0.2.76"
rayon = "1.5.1"
wasm-bindgen-rayon = "1.0.3"
cgmath = "0.18.0"
glam = "0.17.3"
web-sys = {version = "0.3.53", features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Performance',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]}

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false # ['-ol', '0', '-s', '0']