[package]
name = "pcisph-wasm"
version = "0.2.0"
repository = "https://github.com/cerrno/pcisph-wasm"
authors = ["Lucas V. Schuermann <lucas@lvs.io>"]
edition = "2021"
license = "MIT"
readme = "README.md"
publish = false

[workspace]
members = ["native", "solver"]

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { workspace = true }
cgmath = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }

solver = { path = "solver" }

[workspace.dependencies]
env_logger = "0.10.0"
log = "0.4.17"
criterion = "0.4.0"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
glam = { version = "0.22.0", features = ["fast-math", "scalar-math"] }
rayon = "1.6.1"
glium = "0.32.1"
wasm-bindgen-rayon = "1.0.3"
cgmath = "0.18.0"
web-sys = { version = "0.3.50", features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
] }

[profile.release]
lto = "fat"
panic = "abort"
strip = "debuginfo" # strip all 
codegen-units = 1
debug = 0           # Set this to 1 or two for more useful backtraces or flamegraphs

# As of wasm-opt version 110, -O3 empirically leads to
# poorer performance
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
